# claudehack

./: .gitignore  README.md  SDK_GUIDE.md  SSE_EVENTS.md  UI_GUIDE.md  impl_plan.md  index.html  package-lock.json  package.json
.claude/skills/vite-frontend-dev/: SKILL.md
backend/: firebase.py  main.py  pyproject.toml
backend/verif/: CLAUDE.md  README.md  __init__.py  config.py  executor.py  harness.py  modes.py  prompts.py  skills.py
backend/verif/providers/: __init__.py  anthropic.py  base.py  gemini.py  openai.py
docs/: SANDBOX_TOOLS_REQ.md
src/: App.tsx  index.css  main.tsx
src/components/: AuthPage.tsx  ComparisonView.tsx  DashboardPage.tsx  ExecutionView.tsx  FinalOutput.tsx  PlanCanvas.tsx  ProfilePage.tsx  ProtectedRoute.tsx  RubricPanel.tsx  SafeRenderer.tsx  SandboxPage.tsx  SharedRunView.tsx  TaskInput.tsx  UserQuestionDialog.tsx
src/components/ui/: markdown.tsx
src/context/: AuthContext.tsx
src/hooks/: useFileSystem.ts  useSandboxExecution.ts  useTaskExecution.ts  useWorker.ts
src/lib/: cache.ts  firebase.ts  firestore.ts  mockData.ts  sandboxExecutor.ts
src/store/: index.ts
src/store/middleware/: firestoreMiddleware.ts
src/store/slices/: apiKeysSlice.ts  authSlice.ts  runsSlice.ts
src/types/: file-system-access.d.ts  index.ts
src/workers/: sandbox.ts
test_sandbox/: KWH_Market_Projections.xlsx  fs_spec.md  ideas.md  implement.md  kwh_vc_memo.md  kwh_vc_memo_v2.md  market_potential_analysis.md  output.md  release_post.md  security_analysis.md  test_client.mjs
