[project]
name = "rl-harness"
version = "0.1.0"
description = "RL Harness with FastAPI wrapper"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "google-genai>=1.0.0",
    "openai>=1.50.0",
    "anthropic>=0.40.0",
    "python-dotenv>=1.0.0",
    "firebase-admin>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
]
